--- a/.lando.yml
+++ b/.lando.yml
@@ -7,6 +7,6 @@ config:
 services:
   appserver:
     config:
-      php: ./.lando.config/php.ini
+      php: ./.lando.config/php.ini/php.ini
   database:
     portforward: 3307
